--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,7 +68,7 @@ code {
 }
 .nav {
   width: 100%;
-  background-color: #eeeeee;
+  background-color: #88e3e6;
   display: flex;
   justify-content: space-between;
 }
@@ -158,7 +158,6 @@ code {
   color: #000000;
   background: rgba(0, 0, 0, 0.1);
 }
-
 
 @media only screen and (min-width: 672px) {
   .half-width {
