--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,12 +116,24 @@ code {
   left: 0;
 }
 .button {
-  background-color: black;
+  background-color: #88e3e6;
+  border: 1px solid #344b4c;
+  border-radius: 0.5rem;
   color: white;
+  cursor: pointer;
+  display: flex;
+  padding: 0.75rem 1.2rem;
+  width: max-content;
+}
+.button:hover {
+  color: #1e2727;
+  background: #f9ffff;
+  border-color: transparent;
 }
 .container {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .controls {
@@ -158,8 +170,34 @@ code {
   color: #000000;
   background: rgba(0, 0, 0, 0.1);
 }
+.product__container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2.5rem;
+  padding-right: rem;
+}
+.product {
+  border-radius: 2rem;
+  border: 1px solid;
+  border-radius: 0.25rem;
+  border-style: hidden;
+  box-shadow: 8px 6px 18px 0px rgba(74, 69, 69, 0.75);
+  -webkit-box-shadow: 8px 6px 18px 0px rgba(74, 69, 69, 0.75);
+  -moz-box-shadow: 8px 6px 18px 0px rgba(74, 69, 69, 0.75);
+  margin: 1rem 1rem;
+  list-style: none;
+  padding: 1.2rem;
+  transition: all 400ms ease;
+}
+.product-image {
+  border-radius: 1.5rem;
+  display: block;
+  overflow: hidden;
+  object-fit: cover;
+  width: 100%;
+}
 
-@media only screen and (min-width: 672px) {
+/* @media only screen and (min-width: 672px) {
   .half-width {
     max-width: 672px;
   }
@@ -169,4 +207,65 @@ code {
 }
 .right-align {
   text-align: right;
+} */
+/* @media screen and (max-width: 1024px) {
+  .product__container {
+    grid-template-columns: 1fr 1fr;
+    gap: 1.2rem;
+    padding-right: 0.1rem;
+  }
+
+  .main-layout > * {
+    max-width: 1024px;
+  }
+
+  .badge {
+    right: 20px;
+  }
+} */
+
+@media only screen and (min-width: 600px) {
+  .left-align {
+    text-align: left;
+  }
+
+  .right-align {
+    text-align: center;
+  }
+
+  .main-layout {
+    max-width: 90%;
+    margin-right: 2rem;
+  }
+  .main-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.2rem;
+    padding-right: 0.1rem;
+  }
+  .product-image {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .main-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.2rem;
+    padding-right: 0.1rem;
+  }
+  .product-image {
+    width: 100%;
+  }
+  .left-align {
+    text-align: left;
+  }
+
+  .right-align {
+    text-align: center;
+  }
+  .main-layout {
+    max-width: 100%;
+    margin-right: 2rem;
+  }
 }
